# test_task_dom_rf

./: Makefile  README.md  docker-compose.override.yml  docker-compose.yml  dump.sql
backend/: Dockerfile  __start__.py  alembic.ini  entrypoint.sh  pyproject.toml
backend/app/: __main__.py
backend/app/api/routes/: __init__.py  integration_service.py
backend/app/config/: __init__.py
backend/app/config/settings/: __init__.py  app.py  db.py  kafka.py
backend/app/data/migrations/: env.py
backend/app/data/migrations/versions/: 44cf76fe58f7_.py  93d05b467c90_.py
backend/app/data/models/: __init__.py  base.py  integration_service.py
backend/app/data/repositories/: __init__.py  integration_service.py
backend/app/data/sqlalchemy_session/: __init__.py
backend/app/dependencies/: resourses.py
backend/app/domain/integration_service/: __init__.py  entities.py  repositories.py
backend/app/domain/integration_service/services/: __init__.py  create.py
backend/app/external_data_services/: dadata.py  yandex_gpt.py
backend/app/kafka/: broker.py  publish.py  subscribe.py  utils.py
backend/app/kafka/exporters/: __init__.py  base_export_service.py  inegration_service_export_service.py
backend/app/kafka/importers/: __init__.py  base_import_service.py  integration_service_import_service.py
backend/app/kafka/services/: __init__.py  kafka_service.py
db/: Dockerfile
