[tool.poetry]
name = "Domrf project"
version = "0.1.0"
description = "Domrf project"
license = "MIT"
authors=["Denis Pavlov"]


[tool.poetry.dependencies]
python = "3.12.*"
fastapi = {extras = ["all"], version = "0.110.*"}
uvicorn = "0.29.*"
itsdangerous = "2.1.2"
pydantic-settings = "2.2.1"
alembic = "1.13.*"
sqlalchemy = "^2.0.29"
psycopg2-binary = "2.9.*"
asyncpg = "^0.29.0"
sqlmodel = "^0.0.16"
fastapi-debug-toolbar = "^0.6.2"
pytest = "^8.1.1"
sqlalchemy-utils = "^0.41.2"

# Linting
ruff = "0.0.*"


[tool.ruff]
select = ["ALL"]
ignore = [
    "A002",
    "ANN201",
    "A003",
    "EXE002",
    "D100",
    "D104",
    "RUF002",
    "FBT001",
    "FBT002",
    "B008",
    "BLE001",
]
exclude = [
    "**/migrations/**",
]
line-length = 100